--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparar Imágenes</title>
+    <title>Comparar Imágenes v1</title>
 </head>
 <body>
     <h1>Comparar Imágenes</h1>
@@ -16,3 +16,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
