--- a/Index.html
+++ b/Index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparar Imágenes v2</title>
-</head> 
+    <title>Comparar Imágenes V3</title>
+</head>
 <body>
     <h1>Comparar Imágenes</h1>
     <div>
         <video id="video" width="640" height="480" autoplay></video>
         <button id="capture">Tomar Foto</button>
-        <canvas id="canvas" width="640" height="480"></canvas>
+        <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
+        <img id="reference" src="reference-image.png" style="display:none;">
     </div>
     <script src="script.js"></script>
 </body>
