--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
         <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
         <img id="reference" src="reference-image.png" style="display:none;">
     </div>
+    <script async src="https://docs.opencv.org/master/opencv.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
