--- a/Index.html
+++ b/Index.html
@@ -35,9 +35,10 @@
     </div>
     <button id="capture">Tomar Foto</button>
     <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
-    <img id="reference" src="reference-image.png" style="display:none;">
-    <script async src="https://docs.opencv.org/master/opencv.js"></script>
+    <img id="reference1" src="reference-image1.png" style="display:none;">
+    <img id="reference2" src="reference-image2.png" style="display:none;">
+    <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
-
